--- a/aula05/pratica 02/index.html
+++ b/aula05/pratica 02/index.html
@@ -14,7 +14,7 @@
         </div>
     </header>
     <section>
-        <table>
+        <table id="table">
             <tr>
                 <th rowspan="2">Aluno</th>
                 <th colspan="3">Semestre 1</th>
@@ -108,8 +108,8 @@
     </section>
     <footer>
         <div class="calculate">
-            <button class="media-geral">Média Geral</button>
-            <button class="media-materia">Média Materia</button>
+            <button id="media-geral">Média Geral</button>
+            <button id="media-materia">Média Materia</button>
         </div>
     </footer>
 </body>
