--- a/aula05/pratica 02/index.html
+++ b/aula05/pratica 02/index.html
@@ -31,6 +31,7 @@
                 <th>Nota 1</th>
                 <th>Nota 2</th>
                 <th>Nota 3</th>
+                <th>Média Final</th>
             </tr>
             <tr>
                 <td>João</td>
@@ -43,9 +44,11 @@
                 <td>6</td>
                 <td>7</td>
                 <td>9</td>
+                <td></td>
             </tr>
             <tr>
                 <td>Maria</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -67,6 +70,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>Paulo</td>
@@ -79,37 +83,39 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>Miguel</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+                <td>7</td>
                 <td></td>
             </tr>
             <tr>
                 <td>Julia</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
                 <td></td>
             </tr>
         </table>
     </section>
     <footer>
         <div class="calculate">
-            <button id="media-geral">Média Geral</button>
-            <button id="media-materia">Média Materia</button>
+            <button id="media-geral">Média Final</button>
         </div>
     </footer>
 </body>
